[tool.poetry]
name = "django-rest-dropdown"
version = "0.1.0"
description = "Dropdown population implementation for Django REST Framework"
authors = ["Preeti Yuankrathok <preetisatit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.11.0"
django = "^3.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
